--- a/RxWebPageParseDemo/RxWebPageParseDemo.csproj
+++ b/RxWebPageParseDemo/RxWebPageParseDemo.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.16" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RxMulticastingDemo\RxMulticastingDemo.csproj" />
   </ItemGroup>
 
